<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MenuSweet</string>

    <string name="store_email">gaeljudicium@aol.com</string>
    <string name="our_email">contact.menusweet@gmail.com</string>
    <string name="password">ilikecake</string>
    <string name="feedback_subject">Feedback</string>

    <string name="feedback_message">We love feedback!</string>
    <string name="feedback_hint">Leave your feedback here</string>
    <string name="feedback_store">Store feedback</string>
    <string name="feedback_app">Menu feedback</string>
    <string name="send">Send!</string>
</resources>