<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/feedback_message" />

    <EditText
            android:id="@+id/feedback_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback_hint"
            android:inputType="textMultiLine"
            android:imeOptions="actionSend" />

    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_store"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_app" />

    </RadioGroup>

    <Button
            android:id="@+id/send_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/send" />

</LinearLayout>